--- a/build.gradle
+++ b/build.gradle
@@ -28,5 +28,10 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.projectlombok:lombok'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'/*jpa 라이브러리*/
+    implementation 'com.h2database:h2'/*인메모리 관계형 데이터 베이스-재시작시 초기화*/
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
+
+
